# hyperbard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATALICENSE  LICENSE  LICENSES.txt  Makefile  README.md  SUPPORT.md  create_data_release.sh  pyproject.toml  requirements.txt  setup.sh
hyperbard/: plotting.py  preprocessing.py  representations.py  run_preprocessing.py  statics.py  summary_statistics_raw.py  utils.py
hypergraphs/: a-midsummer-nights-dream_act-scene.csv  alls-well-that-ends-well_act-scene.csv  antony-and-cleopatra_act-scene.csv  as-you-like-it_act-scene.csv  coriolanus_act-scene.csv  cymbeline_act-scene.csv  hamlet_act-scene.csv  henry-iv-part-1_act-scene.csv  henry-iv-part-2_act-scene.csv  henry-v_act-scene.csv  henry-vi-part-1_act-scene.csv  henry-vi-part-2_act-scene.csv  henry-vi-part-3_act-scene.csv  henry-viii_act-scene.csv  julius-caesar_act-scene.csv  king-john_act-scene.csv  king-lear_act-scene.csv  loves-labors-lost_act-scene.csv  macbeth_act-scene.csv  measure-for-measure_act-scene.csv  much-ado-about-nothing_act-scene.csv  othello_act-scene.csv  pericles_act-scene.csv  richard-ii_act-scene.csv  richard-iii_act-scene.csv  romeo-and-juliet_act-scene.csv  the-comedy-of-errors_act-scene.csv  the-merchant-of-venice_act-scene.csv  the-merry-wives-of-windsor_act-scene.csv  the-taming-of-the-shrew_act-scene.csv  the-tempest_act-scene.csv  the-two-gentlemen-of-verona_act-scene.csv  the-winters-tale_act-scene.csv  timon-of-athens_act-scene.csv  titus-andronicus_act-scene.csv  troilus-and-cressida_act-scene.csv  twelfth-night_act-scene.csv
(+60 files in other folders)
