[tool.poetry]
name = "hyperbard"
version = "0.1.0"
description = "All the world's a (hyper)graph"
authors = ["dataspider <corinna.coupette@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
jupyterlab = "^3.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
