[tool.poetry]
name = "hyperbard"
version = "0.1.0"
description = "All the world's a (hyper)graph"
authors = ["dataspider <corinna.coupette@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
regex = "^2022.4.24"
hypernetx = "^1.2.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
jupyterlab = "^3.3.4"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
